// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareCredentialSelect should render 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Select a Credential
    </h1>
    <p
      class="subline"
    >
      Select a credential to sign and share
    </p>
    <section
      class="noCredentials"
    >
      <p
        class="info"
      >
        No credentials available
      </p>
      <a
        class="explainerLink"
        href="https://socialkyc.io/"
        rel="noreferrer"
        target="_blank"
      >
        Get Credentials
      </a>
    </section>
    <section
      class="allCredentials"
      hidden=""
      id="allCredentials"
    />
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <a
        aria-disabled="true"
        class="next"
        href="/popup/share/sign?data=eyJjcmVkZW50aWFsUmVxdWVzdCI6eyJjVHlwZXMiOlt7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsInJlcXVpcmVkUHJvcGVydGllcyI6WyJFbWFpbCJdfV0sImNoYWxsZW5nZSI6IlBBU1MifSwidmVyaWZpZXJEaWQiOiJkaWQ6a2lsdDo0cGVoZGRraEVhbmV4VlRUeldBdHJyZm8yUjd4UG5lUHB1aUpMQzdzaFFVODk0YVkifQ=="
      >
        Next
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`ShareCredentialSelect should render interface for no matching credentials 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Select a Credential
    </h1>
    <p
      class="subline"
    >
      Select a credential to sign and share
    </p>
    <section
      class="noCredentials"
    >
      <p
        class="info"
      >
        No credentials available
      </p>
      <a
        class="explainerLink"
        href="https://socialkyc.io/"
        rel="noreferrer"
        target="_blank"
      >
        Get Credentials
      </a>
    </section>
    <section
      class="allCredentials"
      hidden=""
      id="allCredentials"
    />
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <a
        aria-disabled="true"
        class="next"
        href="/popup/share/sign?data=eyJjcmVkZW50aWFsUmVxdWVzdCI6eyJjVHlwZXMiOlt7ImNUeXBlSGFzaCI6IlNvbWUgdW5rbm93biBjVHlwZSJ9XX0sInZlcmlmaWVyRGlkIjoiZGlkOmtpbHQ6NHBlaGRka2hFYW5leFZUVHpXQXRycmZvMlI3eFBuZVBwdWlKTEM3c2hRVTg5NGFZIn0="
      >
        Next
      </a>
    </p>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
